--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -18769,11 +18769,9 @@ series:
         dtstart: 2022-12-08 18:30:00+01:00
         dtend: 2022-12-08 19:30:00+01:00
   - meetupcom:
-      meta_description: '**Talk Synopsis:**
-
-        The rapid development and spread of analytical tools in the biomedical sciences has produced a variety of information about all sorts of biological compo'
-      og_title: Building Biomedical Knowledge Graphs for In-Silico Drug Discovery, Tue, Jan 24, 2023, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/290419416/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Building Biomedical Knowledge Graphs for In-Silico Drug Discovery
         description: 'TypeDB Prague Engineers
