--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -22761,14 +22761,14 @@ series:
           • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
 
 
-          https://www.meetup.com/gdgprague/events/xqcsqsyfcdbsb/'
+          https://www.meetup.com/gdgprague/events/291185765/'
         location: Online event
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_xqcsqsyfcdbsb@meetup.com
-        url: https://www.meetup.com/gdgprague/events/xqcsqsyfcdbsb/
+        url: https://www.meetup.com/gdgprague/events/291185765/
         dtstart: 2023-02-14 18:30:00+01:00
         dtend: 2023-02-14 20:30:00+01:00
   - meetupcom:
@@ -24931,6 +24931,30 @@ series:
         url: https://www.meetup.com/gdgprague/events/289793756/
         dtstart: 2022-12-06 18:30:00+01:00
         dtend: 2022-12-06 20:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, January 17 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/gdgprague/events/290575688/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsyfccbwb@meetup.com
+        url: https://www.meetup.com/gdgprague/events/290575688/
+        dtstart: 2023-01-17 18:30:00+01:00
+        dtend: 2023-01-17 20:30:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
