--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -55326,15 +55326,9 @@ series:
         dtstart: 2022-11-10 17:30:00+01:00
         dtend: 2022-11-10 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Let''s start the new year with something new!
-
-
-        Local community is lacking some C++ initiative, so we have decided to cover this gap and set the cornerstone.
-
-
-        C++ 20 brings b'
-      og_title: C++ Meetup by Pure Storage, Thu, Jan 26, 2023, 5:30 PM   | Meetup
-      url: https://www.meetup.com/pure-storage-talks/events/291134551/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: C++ Meetup by Pure Storage
         description: 'Pure Storage Talks
