--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -20497,11 +20497,9 @@ series:
         dtstart: 2022-12-08 18:30:00+01:00
         dtend: 2022-12-08 19:30:00+01:00
   - meetupcom:
-      meta_description: '**Talk Synopsis**
-
-        Join the [TypeDB community](https://docs.vaticle.com/docs/general/quickstart) to learn how we think about data modelling, and how TypeDB''s expressivity al'
-      og_title: TypeDB Academy | Modelling Principles, Thu, Jan 26, 2023, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/290418736/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: TypeDB Academy | Modelling Principles
         description: 'TypeDB Prague Engineers
