--- a/data/sources/microsoft-events-prague.yaml
+++ b/data/sources/microsoft-events-prague.yaml
@@ -65289,3 +65289,99 @@ series:
         url: https://www.meetup.com/microsoft-events-in-prague/events/261799526/
         dtstart: 2019-06-17 16:30:00+02:00
         dtend: 2019-06-17 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: TechBaby Prague (Virtual Event)
+        description: 'Microsoft Events in Prague
+
+          Wednesday, September 22 at 5:00 PM
+
+
+          Returning to work after Maternity or Paternity leave can be a challenge, and you shouldn''t have to make a choice between getting the most out of your ...
+
+
+          https://www.meetup.com/microsoft-events-in-prague/events/280766905/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_280766905@meetup.com
+        url: https://www.meetup.com/microsoft-events-in-prague/events/280766905/
+        dtstart: 2021-09-22 17:00:00+02:00
+        dtend: 2021-09-22 18:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Office 365 Champions & User Group Connection in Prague
+        description: 'Microsoft Events in Prague
+
+          Tuesday, December 3 at 6:30 PM
+
+
+          RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://aka.ms/O365ChampionConnection (Registra...
+
+
+          https://www.meetup.com/microsoft-events-in-prague/events/266913890/'
+        location: Prague Congress Centre (5. května 1640/65, Praha 4-Nusle, Czech Republic 140 21)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_266913890@meetup.com
+        url: https://www.meetup.com/microsoft-events-in-prague/events/266913890/
+        dtstart: 2019-12-03 18:30:00+01:00
+        dtend: 2019-12-03 20:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Prague Startup Day 2019
+        description: 'Microsoft Events in Prague
+
+          Thursday, September 26 at 5:20 PM
+
+
+          Save the date and register for our upcoming startup community event. We are excited to invite you to our second Prague Startup Day organized by Micros...
+
+
+          https://www.meetup.com/microsoft-events-in-prague/events/264424128/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_264424128@meetup.com
+        url: https://www.meetup.com/microsoft-events-in-prague/events/264424128/
+        dtstart: 2019-09-26 17:20:00+02:00
+        dtend: 2019-09-26 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Startup BBQ 2019 on rooftop
+        description: 'Microsoft Events in Prague
+
+          Monday, June 17 at 4:30 PM
+
+
+          The organizer has made changes in the event for which you registered. The time and agenda was changed, please see the details below. Summer is here an...
+
+
+          https://www.meetup.com/microsoft-events-in-prague/events/261799526/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_261799526@meetup.com
+        url: https://www.meetup.com/microsoft-events-in-prague/events/261799526/
+        dtstart: 2019-06-17 16:30:00+02:00
+        dtend: 2019-06-17 21:00:00+02:00
