--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -39099,3 +39099,49 @@ series:
         url: https://www.meetup.com/asociace-ux/events/289984927/
         dtstart: 2022-12-05 18:00:00+01:00
         dtend: 2022-12-05 20:00:00+01:00
+  - meetupcom:
+      meta_description: '*V čem se nejvíce liší design proces v organizacích různých velikostí a typů? Očekává se od designérů v agenturách, bankách nebo startupech, že budou dodržovat odlišná prav'
+      og_title: 'UX Monday: Design Operations, Mon, Feb 6, 2023, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/asociace-ux/events/291287559/
+      ical:
+        summary: 'UX Monday: Design Operations'
+        description: 'Asociace UX
+
+          Monday, February 6 at 6:00 PM
+
+
+          *V čem se nejvíce liší design proces v organizacích různých velikostí a typů? Očekává se od designérů v agenturách, bankách nebo startupech, že budou ...
+
+          \nhttps://www.meetup.com/asociace-ux/events/291287559/'
+        location: Na Valentince (Na Valentince, Praha 5-Smíchov, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291287559@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/291287559/
+        dtstart: 2023-02-06 18:00:00+01:00
+        dtend: 2023-02-06 20:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: UX Dinner Brno in January
+        description: 'Asociace UX
+
+          Thursday, January 26 at 5:30 PM
+
+
+          UX dinner is a meeting of the UX community in Brno. You can expect an informal dinner, discussing small design problems, an opportunity to find a ment...\n
+
+          https://www.meetup.com/asociace-ux/events/290744897/'
+        location: Padagali (Kotlářská 51a, Brno-střed-Veveří, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290744897@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/290744897/
+        dtstart: 2023-01-26 17:30:00+01:00
+        dtend: 2023-01-26 20:30:00+01:00
