--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -35885,7 +35885,7 @@ series:
         dtstart: 2022-11-24 18:00:00+01:00
         dtend: 2022-11-24 22:00:00+01:00
   - meetupcom:
-      meta_description: '**Imagine you want to have data-driven recommendation. Where do you even start? We’ll be sharing our experience with implementing social media recommendations in several li'
+      meta_description: Imagine you want to have data-driven recommendation. Where do you even start? We’ll be sharing our experience with implementing social media recommendations in several ligh
       og_title: '(PRAGUE) Data & AI/ML Lightning Talks: Recommendations, Deconstructed, Tue, Jan 31, 2023, 6:00 PM   | Meetup'
       url: https://www.meetup.com/strv-meetups/events/290896731/
       ical:
@@ -35895,7 +35895,7 @@ series:
           Tuesday, January 31 at 6:00 PM
 
 
-          **Imagine you want to have data-driven recommendation. Where do you even start? We’ll be sharing our experience with implementing social media recomme...
+          Imagine you want to have data-driven recommendation. Where do you even start? We’ll be sharing our experience with implementing social media recommend...
 
           \nhttps://www.meetup.com/strv-meetups/events/290896731/'
         location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
@@ -35908,7 +35908,7 @@ series:
         dtstart: 2023-01-31 18:00:00+01:00
         dtend: 2023-01-31 22:00:00+01:00
   - meetupcom:
-      meta_description: '**Imagine you want to have data-driven recommendation. Where do you even start? We’ll be sharing our experience with implementing social media recommendations in several li'
+      meta_description: Imagine you want to have data-driven recommendation. Where do you even start? We’ll be sharing our experience with implementing social media recommendations in several ligh
       og_title: '(BRNO) Data & AI/ML Lightning Talks: Recommendations, Deconstructed, Thu, Feb 2, 2023, 6:00 PM   | Meetup'
       url: https://www.meetup.com/strv-meetups/events/290896746/
       ical:
@@ -35918,7 +35918,7 @@ series:
           Thursday, February 2 at 6:00 PM
 
 
-          **Imagine you want to have data-driven recommendation. Where do you even start? We’ll be sharing our experience with implementing social media recomme...
+          Imagine you want to have data-driven recommendation. Where do you even start? We’ll be sharing our experience with implementing social media recommend...
 
 
           https://www.meetup.com/strv-meetups/events/290896746/'
@@ -36622,7 +36622,10 @@ series:
         dtstart: 2022-11-24 18:00:00+01:00
         dtend: 2022-11-24 22:00:00+01:00
   - meetupcom:
-      meta_description: '**You’re invited to our Lightning Talks! As opposed to our regular format, these will be short and quick. Expect eight 5-min long talks covering a whole bunch of topics rel'
+      meta_description: '**[🔥 PLEASE CLAIM YOUR FREE TICKET HERE 🔥](https://www.eventbrite.com/e/522566278807)**
+
+
+        You’re invited to our Lightning Talks! As opposed to our regular format, these wi'
       og_title: (PRAGUE) iOS Lightning Talks, Thu, Feb 9, 2023, 6:00 PM   | Meetup
       url: https://www.meetup.com/strv-meetups/events/291136548/
       ical:
@@ -36632,7 +36635,7 @@ series:
           Thursday, February 9 at 6:00 PM
 
 
-          **You’re invited to our Lightning Talks! As opposed to our regular format, these will be short and quick. Expect eight 5-min long talks covering a who...\n
+          **(https://www.eventbrite.com/e/522566278807)** You’re invited to our Lightning Talks! As opposed to our regular format, these will be short and quick...\n
 
           https://www.meetup.com/strv-meetups/events/291136548/'
         location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
@@ -36644,6 +36647,29 @@ series:
         url: https://www.meetup.com/strv-meetups/events/291136548/
         dtstart: 2023-02-09 18:00:00+01:00
         dtend: 2023-02-09 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: STRV Backend Meetup - How We Build Backend PRG
+        description: 'STRV Meetups
+
+          Thursday, November 24 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/backend-meetup-how-we-build-backend-prg-tickets-464986867237?aff=meetup)** Curious about how we build backend solution...\n
+
+          https://www.meetup.com/strv-meetups/events/289663632/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289663632@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289663632/
+        dtstart: 2022-11-24 18:00:00+01:00
+        dtend: 2022-11-24 22:00:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
