--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -35885,9 +35885,9 @@ series:
         dtstart: 2022-11-24 18:00:00+01:00
         dtend: 2022-11-24 22:00:00+01:00
   - meetupcom:
-      meta_description: Imagine you want to have data-driven recommendation. Where do you even start? We’ll be sharing our experience with implementing social media recommendations in several ligh
-      og_title: '(PRAGUE) Data & AI/ML Lightning Talks: Recommendations, Deconstructed, Tue, Jan 31, 2023, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/strv-meetups/events/290896731/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: '(PRAGUE) Data & AI/ML Lightning Talks: Recommendations, Deconstructed'
         description: 'STRV Meetups
@@ -37130,3 +37130,29 @@ series:
         url: https://www.meetup.com/strv-meetups/events/289663632/
         dtstart: 2022-11-24 18:00:00+01:00
         dtend: 2022-11-24 22:00:00+01:00
+  - meetupcom:
+      meta_description: '**[🔥 PLEASE CLAIM YOUR FREE TICKET HERE 🔥](https://www.eventbrite.com/e/529055237457)**
+
+
+        After a long time, the STRV Frontend team is organizing a meetup solely focused o'
+      og_title: (BRNO) React Native Meetup, Tue, Feb 14, 2023, 6:00 PM   | Meetup
+      url: https://www.meetup.com/strv-meetups/events/291307706/
+      ical:
+        summary: (BRNO) React Native Meetup
+        description: 'STRV Meetups
+
+          Tuesday, February 14 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/529055237457)** After a long time, the STRV Frontend team is organizing a meetup solely focused on React Native. Over ...\n
+
+          https://www.meetup.com/strv-meetups/events/291307706/'
+        location: STRV (Přízova 284/5, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291307706@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/291307706/
+        dtstart: 2023-02-14 18:00:00+01:00
+        dtend: 2023-02-14 22:00:00+01:00
