--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -9212,9 +9212,9 @@ series:
         dtstart: 2022-09-07 19:00:00+02:00
         dtend: 2022-09-07 22:00:00+02:00
   - meetupcom:
-      meta_description: Find Meetup events so you can do more of what matters to you. Or create your own group and meet people near you who share your interests.
-      og_title: First Wednesday Of The Month - Ruby, Wed, Feb 1, 2023, 7:00 PM   | Meetup
-      url: https://www.meetup.com/praguerb/events/dkmktfyfcdbcb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: First Wednesday Of The Month - Ruby
         description: 'Prague.rb / CSRUG
@@ -16519,3 +16519,24 @@ series:
         url: https://www.meetup.com/praguerb/events/290352816/
         dtstart: 2023-01-04 19:00:00+01:00
         dtend: 2023-01-04 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find Meetup events so you can do more of what matters to you. Or create your own group and meet people near you who share your interests.
+      og_title: First Wednesday Of The Month - Ruby, Wed, Jun 7, 2023, 7:00 PM   | Meetup
+      url: https://www.meetup.com/praguerb/events/dkmktfyfcjbkb/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, June 7 at 7:00 PM
+
+
+          https://www.meetup.com/praguerb/events/dkmktfyfcjbkb/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfyfcjbkb@meetup.com
+        url: https://www.meetup.com/praguerb/events/dkmktfyfcjbkb/
+        dtstart: 2023-06-07 19:00:00+02:00
+        dtend: 2023-06-07 22:00:00+02:00
